--- a/OHET_Project/OHET_Project/Views/Heroes/Details.cshtml
+++ b/OHET_Project/OHET_Project/Views/Heroes/Details.cshtml
@@ -107,7 +107,7 @@
             }
             @if (!string.IsNullOrEmpty(Model.character))
             {
-                <h3>Charcter</h3>
+                <h3>Character</h3>
                 <blockquote>@Model.character</blockquote>
             }
         </div>
