--- a/OHET_Project/OHET_Project/Views/Shared/_Layout.cshtml
+++ b/OHET_Project/OHET_Project/Views/Shared/_Layout.cshtml
@@ -49,8 +49,8 @@
             <img src="~/Images/cover.png" alt="" />
             <div class="inner">
                 <header>
-                    <p>Lorem ipsum dolor sit amet nullam feugiat</p>
-                    <h2>Magna etiam</h2>
+                    <p>Outstanding Heroes and Extraordinary Threats</p>
+                    <h2>OHET Legacy</h2>
                 </header>
             </div>
         </article>
@@ -58,8 +58,8 @@
             <img src="~/Images/cover.png" alt="" />
             <div class="inner">
                 <header>
-                    <p>Adipiscing lorem ipsum feugiat sed phasellus consequat</p>
-                    <h2>Etiam feugiat</h2>
+                    <p>Interactive Compendium</p>
+                    <h2>OHET Legacy</h2>
                 </header>
             </div>
         </article>
@@ -67,8 +67,8 @@
             <img src="~/Images/cover.png" alt="" />
             <div class="inner">
                 <header>
-                    <p>Ipsum dolor sed magna veroeros lorem ipsum</p>
-                    <h2>Lorem adipiscing</h2>
+                    <p>Find Your Path</p>
+                    <h2>OHET Legacy</h2>
                 </header>
             </div>
         </article>
@@ -80,7 +80,8 @@
     <footer id="footer">
         <div class="copyright">
             All Content is &copy;Copyright of Marcin Krupa &Aacute; Imran Muhammad <br>
-            Trademark & &copy; of Outstanding Heroes and Extraordinary Threads 2017-2018 by kuglarz
+            Trademark & &copy; of Outstanding Heroes and Extraordinary Threads 2017-2018 by kuglarz <br>
+            Character sheet created by Keegan Techentin &Aacute; Template created by Hielo
         </div>
     </footer>
 
