--- a/OHET_Project/OHET_Project/Views/Posts/Edit.cshtml
+++ b/OHET_Project/OHET_Project/Views/Posts/Edit.cshtml
@@ -23,7 +23,7 @@
             </div>
             <br />
             <div class="12u$">
-                @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control", placeholder = "Description" } })
+                @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control", placeholder = "Text" } })
                 @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
             </div>
 
