--- a/OHET_Project/OHET_Project/Views/Classes/Edit.cshtml
+++ b/OHET_Project/OHET_Project/Views/Classes/Edit.cshtml
@@ -23,19 +23,14 @@
             </div>
             <br />
             <div class="12u$">
-                @Html.EditorFor(model => model.description, new { htmlAttributes = new { @class = "form-control", placeholder = "Description" } })
+                @Html.TextAreaFor(model => model.description, 12, 1, htmlAttributes: new { @class = "form-control", @placeholder = "Description" })
                 @Html.ValidationMessageFor(model => model.description, "", new { @class = "text-danger" })
             </div>
             <br />
             <div class="12u$">
                 @Html.DropDownList("isSpellcaster", new SelectList(new[] { new { Value = "true", Text = "Yes" }, new { Value = "false", Text = "No" }, }, "Value", "Text", Model))
             </div>
-            @*
-            <br />
-            <div class="12u$">
-                <input type="file" name="ImageData" onchange="fileCheck(this);" />
-            </div>
-            *@
+
             <br />
 
             <footer class="align-center">
