--- a/OHET_Project/OHET_Project/Views/Posts/Edit.cshtml
+++ b/OHET_Project/OHET_Project/Views/Posts/Edit.cshtml
@@ -17,13 +17,14 @@
             @Html.AntiForgeryToken()
             @Html.HiddenFor(model => model.IDPost)
             @Html.HiddenFor(model => model.ApplicationUserId)
+            @Html.HiddenFor(model => model.Date)
             <div class="12u$">
                 @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control", placeholder = "Title" } })
                 @Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger" })
             </div>
             <br />
             <div class="12u$">
-                @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control", placeholder = "Text" } })
+                @Html.TextAreaFor(model => model.Description, 24, 1, htmlAttributes: new { @class = "form-control", @placeholder = "Description" })
                 @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
             </div>
 
