--- a/OHET_Project/OHET_Project/Views/Classes/Create.cshtml
+++ b/OHET_Project/OHET_Project/Views/Classes/Create.cshtml
@@ -21,16 +21,13 @@
             </div>
             <br />
             <div class="12u$">
-                @Html.EditorFor(model => model.description, new { htmlAttributes = new { @class = "form-control", placeholder = "Description" } })
+                @Html.TextAreaFor(model => model.description, 12, 1, htmlAttributes: new { @class = "form-control", @placeholder = "Description" })
                 @Html.ValidationMessageFor(model => model.description, "", new { @class = "text-danger" })
             </div>
             <br />
             <div class="12u$">
+                Is spellcaster?
                 @Html.DropDownList("isSpellcaster",new SelectList(new[]{new { Value = "true", Text = "Yes" },new { Value = "false", Text = "No" },},"Value","Text",Model))
-            </div>
-            <br />
-            <div class="12u$">
-                <input type="file" name="ImageData" onchange="fileCheck(this);" />
             </div>
 
             <br />
@@ -42,9 +39,6 @@
     </div>
 	
     <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Create" class="btn btn-default" />
-        </div>
 		<div class="align-center">
 			@Html.ActionLink("Back to List", "Index", new { isOff = ViewBag.isOff })
 		</div>
