--- a/OHET_Project/OHET_Project/Views/Classes/Index.cshtml
+++ b/OHET_Project/OHET_Project/Views/Classes/Index.cshtml
@@ -18,7 +18,7 @@
             }
         </header>
         <footer class="align-center">
-            @if ((User.IsInRole("User") || User.IsInRole("Editor") || User.IsInRole("Admin")) && !ViewBag.isOff)
+            @if ((((User.IsInRole("User") || User.IsInRole("Editor")) && !ViewBag.isOff) || ((User.IsInRole("Admin")) && ViewBag.isOff)))
             {
                 <a href="@Url.Action("Create", "Classes", new { isOff = ViewBag.isOff })" class="button alt">Create Class</a>
             }
