--- a/OHET_Project/OHET_Project/Views/Comments/Create.cshtml
+++ b/OHET_Project/OHET_Project/Views/Comments/Create.cshtml
@@ -16,7 +16,7 @@
         {
             @Html.AntiForgeryToken()
             <div class="12u$">
-                @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control", placeholder = "Description" } })
+                @Html.TextAreaFor(model => model.Description, 6, 1, htmlAttributes: new { @class = "form-control", @placeholder = "Description" })
                 @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
             </div>
 
