--- a/OHET_Project/OHET_Project/Views/Comments/Edit.cshtml
+++ b/OHET_Project/OHET_Project/Views/Comments/Edit.cshtml
@@ -18,8 +18,9 @@
             @Html.HiddenFor(model => model.IDComment)
             @Html.HiddenFor(model => model.IDPost)
             @Html.HiddenFor(model => model.ApplicationUserId)
+            @Html.HiddenFor(model => model.Date)
             <div class="12u$">
-                @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control", placeholder = "Description" } })
+                @Html.TextAreaFor(model => model.Description, 6, 1, htmlAttributes: new { @class = "form-control", @placeholder = "Description" })
                 @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
             </div>
 
