--- a/OHET_Project/OHET_Project/Views/Home/Content.cshtml
+++ b/OHET_Project/OHET_Project/Views/Home/Content.cshtml
@@ -14,7 +14,7 @@
                         <p></p>
                         <footer class="align-center">
                             <a href="@Url.Action("Index", "Classes", new {isOff = true})" class="button alt">Official</a>
-                            @if (User.Identity.IsAuthenticated)
+                            @if (User.Identity.IsAuthenticated && !User.IsInRole("Admin"))
                             {
                                 <a href="@Url.Action("Index", "Classes", new { isOff = false })" class="button alt">Homebrew</a>
                             }
@@ -35,7 +35,7 @@
                         <p></p>
                         <footer class="align-center">
                             <a href="@Url.Action("Index", "Rules", new {isOff = true})" class="button alt">Official</a>
-                            @if (User.Identity.IsAuthenticated)
+                            @if (User.Identity.IsAuthenticated && !User.IsInRole("Admin"))
                             {
                                 <a href="@Url.Action("Index", "Rules", new { isOff = false })" class="button alt">Homebrew</a>
                             }
@@ -56,7 +56,7 @@
                         <p></p>
                         <footer class="align-center">
                             <a href="@Url.Action("Index", "Adventures", new {isOff = true})" class="button alt">Official</a>
-                            @if (User.Identity.IsAuthenticated)
+                            @if (User.Identity.IsAuthenticated && !User.IsInRole("Admin"))
                             {
                                 <a href="@Url.Action("Index", "Adventures", new { isOff = false })" class="button alt">Homebrew</a>
                             }
@@ -77,7 +77,7 @@
                         <p></p>
                         <footer class="align-center">
                             <a href="@Url.Action("Index", "Items", new {isOff = true})" class="button alt">Official</a>
-                            @if (User.Identity.IsAuthenticated)
+                            @if (User.Identity.IsAuthenticated && !User.IsInRole("Admin"))
                             {
                                 <a href="@Url.Action("Index", "Items", new { isOff = false })" class="button alt">Homebrew</a>
                             }
@@ -98,7 +98,7 @@
                         <p></p>
                         <footer class="align-center">
                             <a href="@Url.Action("Index", "Spells", new {isOff = true})" class="button alt">Official</a>
-                            @if (User.Identity.IsAuthenticated)
+                            @if (User.Identity.IsAuthenticated && !User.IsInRole("Admin"))
                             {
                                 <a href="@Url.Action("Index", "Spells", new { isOff = false })" class="button alt">Homebrew</a>
                             }
@@ -119,7 +119,7 @@
                         <p></p>
                         <footer class="align-center">
                             <a href="@Url.Action("Index", "Monsters", new {isOff = true})" class="button alt">Official</a>
-                            @if (User.Identity.IsAuthenticated)
+                            @if (User.Identity.IsAuthenticated && !User.IsInRole("Admin"))
                             {
                                 <a href="@Url.Action("Index", "Monsters", new { isOff = false })" class="button alt">Homebrew</a>
                             }
