--- a/OHET_Project/OHET_Project/Views/Items/Edit.cshtml
+++ b/OHET_Project/OHET_Project/Views/Items/Edit.cshtml
@@ -28,7 +28,7 @@
             </div>
             <br />
             <div class="12u$">
-                @Html.EditorFor(model => model.description, new { htmlAttributes = new { @class = "form-control", placeholder = "Description" } })
+                @Html.TextAreaFor(model => model.description, 12, 1, htmlAttributes: new { @class = "form-control", @placeholder = "Description" })
                 @Html.ValidationMessageFor(model => model.description, "", new { @class = "text-danger" })
             </div>
 
