--- a/OHET_Project/OHET_Project/Views/Items/Index.cshtml
+++ b/OHET_Project/OHET_Project/Views/Items/Index.cshtml
@@ -26,7 +26,7 @@
             </p>
         }
         <footer class="align-center">
-            @if ((User.IsInRole("User") || User.IsInRole("Editor") || User.IsInRole("Admin")) && !ViewBag.isOff)
+            @if ((((User.IsInRole("User") || User.IsInRole("Editor")) && !ViewBag.isOff) || ((User.IsInRole("Admin")) && ViewBag.isOff)))
             {
                 <a href="@Url.Action("Create", "Items", new { isOff = ViewBag.isOff })" class="button alt">Create Item</a>
             }
