--- a/OHET_Project/OHET_Project/Views/Posts/Create.cshtml
+++ b/OHET_Project/OHET_Project/Views/Posts/Create.cshtml
@@ -21,7 +21,7 @@
             </div>
             <br />
             <div class="12u$">
-                @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control", placeholder = "Description" } })
+                @Html.TextAreaFor(model => model.Description, 24, 1, htmlAttributes: new { @class = "form-control", @placeholder = "Description" })
                 @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
             </div>
             <br />
