--- a/OHET_Project/OHET_Project/Views/Subposts/Create.cshtml
+++ b/OHET_Project/OHET_Project/Views/Subposts/Create.cshtml
@@ -12,7 +12,7 @@
                 <h2>Create Subarticle</h2>
             </header>
         </div>
-        @using (Html.BeginForm("Create", "Subposts", FormMethod.Post, new { enctype = "multipart/form-data" }))
+        @using (Html.BeginForm())
         {
             @Html.AntiForgeryToken()
             <div class="12u$">
@@ -21,12 +21,8 @@
             </div>
             <br />
             <div class="12u$">
-                @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control", placeholder = "Description" } })
+                @Html.TextAreaFor(model => model.Description, 24, 1, htmlAttributes: new { @class = "form-control", @placeholder = "Description" })
                 @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
-            </div>
-            <br />
-            <div class="12u$">
-                <input type="file" name="ImageData" onchange="fileCheck(this);" />
             </div>
 
             <br />
