--- a/OHET_Project/OHET_Project/Views/Shared/_LoginPartial.cshtml
+++ b/OHET_Project/OHET_Project/Views/Shared/_LoginPartial.cshtml
@@ -1,12 +1,15 @@
 ﻿@using Microsoft.AspNet.Identity
 @if (Request.IsAuthenticated)
 {
-    @Html.AntiForgeryToken()
     <ul class="links">
         <li>
             @Html.ActionLink("Hello " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage", @class = "navbar-brand" })
         </li>
-        <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
+        @using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
+        {
+            @Html.AntiForgeryToken()
+            <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
+        }
     </ul>
 }
 else
