Added validation to create personal data in create character sheet view
Translated some texts in character sheet from pl to eng

--- a/OHET_Project/OHET_Project/Views/Heroes/_createAttributesData.cshtml
+++ b/OHET_Project/OHET_Project/Views/Heroes/_createAttributesData.cshtml
@@ -59,6 +59,6 @@
 
 
     <footer class="align-center">
-        <button type="submit" class="button alt">Zakończ!</button>
+        <button type="submit" class="button alt">Finish!</button>
     </footer>
     }
