More minor fixes.

--- a/OHET_Project/OHET_Project/Views/Classes/Edit.cshtml
+++ b/OHET_Project/OHET_Project/Views/Classes/Edit.cshtml
@@ -28,6 +28,7 @@
             </div>
             <br />
             <div class="12u$">
+                Is spellcaster?
                 @Html.DropDownList("isSpellcaster", new SelectList(new[] { new { Value = "true", Text = "Yes" }, new { Value = "false", Text = "No" }, }, "Value", "Text", Model))
             </div>
 
