--- a/OHET_Project/OHET_Project/Views/Subposts/Delete.cshtml
+++ b/OHET_Project/OHET_Project/Views/Subposts/Delete.cshtml
@@ -16,12 +16,12 @@
         {
             @Html.AntiForgeryToken()
             <div class="12u$">
-                Title
+                Article Title
                 @Html.EditorFor(model => model.Post.Title, new { htmlAttributes = new { @class = "form-control", disabled = "disabled" } })
             </div>
             <br />
             <div class="12u$">
-                Title
+                Subarticle Title
                 @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control", disabled = "disabled" } })
             </div>
             <br />
