--- a/OHET_Project/OHET_Project/Views/Home/Index.cshtml
+++ b/OHET_Project/OHET_Project/Views/Home/Index.cshtml
@@ -6,13 +6,9 @@
 <section id="one" class="wrapper style2">
     <div class="inner">
         <div class="grid-style">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ornare sapien mauris, quis mollis nulla condimentum at. Donec ac libero non ligula interdum tincidunt. Proin id dui sed sapien dictum ullamcorper. Curabitur commodo risus eget nibh eleifend sodales. Integer semper semper fermentum. Nam sit amet metus malesuada, vestibulum magna interdum, faucibus felis. Integer imperdiet nulla ac est fringilla iaculis vel et erat. In hac habitasse platea dictumst. Mauris lacinia, dolor vitae rutrum lacinia, ipsum tellus tempor risus, non maximus mi leo sed risus.
+            Outstanding Heroes and Extraordinary Threats is a heroic fantasy tabletop game that requires the use of paper, pencils, dice – and most of all – words. Useful will be also imagination and a few hours of time. <br /><br />
 
-            Aliquam volutpat mollis neque sed mattis. Quisque lacinia commodo tortor, at tempor metus laoreet nec. Donec ut bibendum magna, in tincidunt tortor. Suspendisse porta libero sit amet leo mollis, id lobortis odio molestie. Suspendisse eu porttitor risus, eu elementum justo. Vivamus consectetur nunc ante, auctor sagittis eros consectetur porta. Proin rutrum porttitor felis et gravida. Donec quam dolor, maximus a metus vel, pharetra sodales lectus. Integer nec diam id tortor molestie fermentum eget ac leo. Nam dictum lacinia augue, eu rutrum orci porttitor a. Donec in tortor maximus, euismod lectus sed, ultrices orci.
-
-            Donec porttitor maximus porttitor. Phasellus vulputate a velit id dignissim. Praesent in erat vitae quam porttitor sodales. Proin elementum luctus nibh, id tincidunt risus hendrerit ac. Proin ac iaculis ante. Donec lacus sapien, eleifend quis lorem sed, tincidunt efficitur sapien. Mauris eu mauris volutpat, fringilla mauris vitae, malesuada eros. Integer vulputate iaculis suscipit. Suspendisse porttitor condimentum eleifend. Suspendisse fermentum risus mi, nec maximus elit porta eu. In id sodales quam, pulvinar porttitor enim.
-
-            Aliquam ullamcorper purus nec orci ultrices, vitae dictum neque consequat. Vestibulum eget lorem leo. Phasellus sit amet arcu vel ipsum imperdiet viverra. Morbi vehicula feugiat pretium. In hac habitasse platea dictumst. Suspendisse rhoncus nisl metus. Morbi iaculis leo id nisl facilisis, eget euismod augue pharetra. Nulla non urna eget urna ornare ullamcorper. Nulla a venenatis est, quis tincidunt erat. Praesent consectetur elit nec mauris aliquet efficitur.
+            "At the time, Michał Dzidt, presented the early version of his own system, which he called OHET. I looked through this short rulebook and found that it suited my needs to a great extent. In OHET there are no experience levels, or health points, or the range of weapons and spells carefully measured in meters (or worse, Imperial units). Only 2 out of 6 possible test results are plain, “succeeded/failed”, and the other 4 results force the Game Master to be more creative, which encourages a varied gameplay." - https://castelviator.wordpress.com/
         </div>
     </div>
 </section>
