--- a/OHET_Project/OHET_Project/Views/Manage/Index.cshtml
+++ b/OHET_Project/OHET_Project/Views/Manage/Index.cshtml
@@ -7,7 +7,7 @@
     <div class="inner">
         <header class="align-center">
             <p class="special">You must gather your party before venturing forth!</p>
-            <h2>Join us! - Register</h2>
+            <h2>Account Manager</h2>
         </header>
     </div>
     <div class="inner">
@@ -24,11 +24,6 @@
                     @Html.ActionLink("Create", "SetPassword")
                 }
                 ]
-            </dd>
-            <dt>External Logins:</dt>
-            <dd>
-                @Model.Logins.Count [
-                @Html.ActionLink("Manage", "ManageLogins") ]
             </dd>
         </dl>
     </div>
