--- a/OHET_Project/OHET_Project/Views/Monsters/Create.cshtml
+++ b/OHET_Project/OHET_Project/Views/Monsters/Create.cshtml
@@ -12,7 +12,7 @@
                 <h2>Create Monster</h2>
             </header>
         </div>
-        @using (Html.BeginForm("Create", "Monsters", FormMethod.Post, new { enctype = "multipart/form-data" }))
+        @using (Html.BeginForm())
         {
             @Html.AntiForgeryToken()
             <div class="12u$">
